<resources>
    <string name="app_name">SafeValet</string>
    <string name="sign_up">Sign Up</string>
    <string name="string_description"> By clicking sign up. you agree to our terms and conditions</string>
    <string name="login">Login</string>
    <string name="update">Update</string>
    <string name="user_image">user_image</string>
    <string name="upload">upload</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="MyCar">My Car</string>
    <string name="history">History</string>
    <string name="share">Share</string>
    <string name="user">My Profile</string>
    <string name="settings">Settings</string>
    <string name="create_account_sign_up">Create Account</string>
    <string name="code_verification_header">A code will be sent to your phone number to activate your account</string>
    <string name="enter_code">Enter the verification code</string>
    <string name="check">Check</string>
    <string name="not_receive_code">Did not receive a verification code ?</string>
    <string name="resend_code_30">Resend code after (%s)</string>
    <string name="resend_code"><u>Resend Code Again</u></string>
    <string name="error_occurred">An error occurred, please try again later</string>
    <string name="correct_otp_required">Please input correct otp code</string>
    <string name="loading">Loading</string>
    <string name="verification_required">Please verify your number before continue</string>
    <string name="edit_phone">Edit Phone Number</string>
    <string name="add_phone_number">Please Enter Your Number</string>
    <string name="phone_number_sign_up">* Phone Number</string>
    <string name="submit">Send</string>
    <string name="required">field required</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="password">Password</string>
    <string name="pass_not_match">Password does not match</string>

    <string name="language">Language</string>
    <string name="logout">Log out</string>
    <string name="save">Save</string>
    <string name="add_your_first_car">Add your first car</string>
    <string name="let_s_get_you_started">Let\'s get you started!</string>
    <string name="nick_name">Nick name *</string>
    <string name="car_make">Car Make</string>
    <string name="car_model">Car Model</string>
    <string name="year">Year</string>
    <string name="plate_no">Plate NO.</string>
    <string name="car_registration_plate">Car registration plate?</string>
    <string name="jordanian">Jordanian</string>
    <string name="foreign">Foreign</string>
    <string name="_35_98634">35 - 98634</string>
    <string name="white_rounded_rectangle">white rounded rectangle</string>
    <string name="kia_sportage_2022">Kia sportage 2022</string>
    <string name="_42_32893">42 - 32893</string>
    <string name="mercedes_s_class_2022">Mercedes s class 2022</string>
    <string name="add_car">Add Car</string>
    <string name="my_car_35_98634">My Car 35 - 98634</string>
    <string name="show_my_qr">Show My QR</string>
    <string name="call_back_my_car">Call Back My Car</string>
    <string name="safe_valet">Safe Valet</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="july">July 23 2022 at 09:15 AM</string>
    <string name="enable_location">Enable Location</string>
    <string name="hi_nice_to_meet_you">Hi, nice to meet you!</string>
    <string name="please_enable_location_services">Please enable location services</string>
    <string name="not_now">Not Now</string>
    <string name="meet_the_driver">Meet the Driver</string>
    <string name="_1_show_the_qr_code_to_the_driver">1- Show the QR code to the driver</string>
    <string name="_2_let_them_scan_it">2 - Let them scan it</string>
    <string name="_3_track_your_car">Track your car </string>
    <string name="Date">14 - 10 - 2022</string>
    <string name="ahmad_zuhair">Ahmad Zuhair</string>
    <string name="time">12:45 PM</string>
    <string name="completed">Completed</string>
    <string name="swefieh_village">Swefieh Village</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home" >Home</string>
    <string name="login_enter">login</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="profileFragment">profileFragemnt</string>
    <string name="myProfile" />
    <string name="your_name">Your Name</string>
    <string name="your_e_mail">Your E-Mail</string>
    <string name="_962">+962</string>
    <string name="histoty">historyFragment</string>
    <string name="username">Username</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="change">change</string>
    <string name="Required"> Required </string>
    <string name="error"> error </string>
    <string name="my_car">My Car</string>
    <string name="car_registration">Add Car</string>
    <string name="car_parked">Car Parked</string>
    <string name="_3_min">3 min</string>
    <string name="trip_completed">Trip Completed</string>
    <string name="_3_20_minutes">3:20 minutes</string>
    <string name="done">Done</string>
    <string name="hello">Hello, </string>
    <string name="Notification">Notification </string>

</resources>