<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/qrbox"
        tools:ignore="UselessParent">


        <TextView
            android:id="@+id/whiteMyCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/my_car_35_98634"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </LinearLayout>

    <!--<FrameLayout-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="wrap_content"-->
    <!--    >-->
    <ImageView
        android:layout_width="200dp"
        android:layout_height="350dp"
        android:src="@drawable/driver"
        android:layout_marginStart="90dp"
        android:layout_marginTop="35dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="220dp"
        android:alpha="0.5"
        android:background="@drawable/custom_shape"
        android:backgroundTint="@color/driver"
        android:orientation="vertical"
        tools:ignore="UselessParent">


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="300dp"
            android:text="@string/meet_the_driver"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>


    <!--</FrameLayout>-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="350dp"
        android:text="@string/_1_show_the_qr_code_to_the_driver"
        android:textColor="@color/instruction"
        android:textSize="16sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="380dp"
        android:text="@string/_2_let_them_scan_it"
        android:textColor="@color/instruction"
        android:textSize="16sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="410dp"
        android:text="@string/_3_track_your_car"
        android:textColor="@color/instruction"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="450dp"
        android:background="@drawable/qrrectangle">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/whiteqr" />
    </LinearLayout>


</RelativeLayout>

