<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#342596BE"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="162dp"
        android:background="@drawable/rounded_box"
        android:backgroundTint="@color/white"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/enable_location"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp" />

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="120dp"
            android:src="@drawable/mark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hi_nice_to_meet_you"
            android:textAlignment="center"
            android:textColor="@color/langColor"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enable_location_services"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="390dp"
        android:layout_marginEnd="51dp"
        android:background="@drawable/bluelocation"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="19dp"
            android:src="@drawable/navigation" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginTop="18dp"
            android:text="@string/enable_location"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="470dp"
        android:layout_marginBottom="73dp"
        android:text="@string/not_now"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>
