<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layoutToolBar"
        android:layout_height="?actionBarSize"
        android:layout_width="match_parent"
        android:background="@color/blue"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/imageMenu"
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_menu"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            />

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp">




        <com.google.android.material.card.MaterialCardView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end|top"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="23dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/exchange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/upload"
                android:src="@drawable/exchange" />

<!--            <TextView-->
<!--                android:id="@+id/change"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/change"-->
<!--                android:textColor="@color/black"-->
<!--                android:textSize="15sp"-->
<!--                android:layout_marginTop="100dp"-->
<!--                android:layout_marginStart="100dp"-->
<!--                />-->


        </com.google.android.material.card.MaterialCardView>



        <com.google.android.material.card.MaterialCardView
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:strokeColor="@android:color/white"
            app:cardElevation="0dp">


            <ImageView
                android:id="@+id/user_image"
                android:layout_width="match_parent"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/user_image"
                android:scaleType = "centerInside"
                android:src="@drawable/qrbox"/>

            <TextView
                android:id="@+id/whiteMyCar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/my_car_35_98634"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </com.google.android.material.card.MaterialCardView>

    </FrameLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        >
    <ImageView
            android:id="@+id/showMyQR"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:background="@color/white"
            android:contentDescription="@string/white_rounded_rectangle"
            android:src="@drawable/whitellipse" />

        <ImageView
            android:id="@+id/showMyQRImg"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:contentDescription="@string/white_rounded_rectangle"
            android:focusable="true"
            android:foregroundGravity="center"
            android:src="@drawable/qr" />


        <TextView
            android:id="@+id/showQr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/show_my_qr"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp">

        <ImageView
            android:id="@+id/CallMyCar"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            android:contentDescription="@string/white_rounded_rectangle"
            android:src="@drawable/whitellipse" />


        <ImageView
            android:id="@+id/callBackMyCarImg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:clickable="true"
            android:contentDescription="@string/white_rounded_rectangle"
            android:focusable="true"
            android:src="@drawable/car2" />


        <TextView
            android:id="@+id/callMyCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:text="@string/call_back_my_car"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>



</RelativeLayout>